# spauto_devnet

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  .spauto-clab.yml.bak  .spauto-mpls-sdn-core.yml  .spauto-mpls-sdn-full.yaml  .spauto-mpls-sdn.yaml  .spauto-topology.yml.bak  .yamllint  Dockerfile  README.html  README.md  changelog.html  docker-compose-tig.yml  docker-compose.yml  full-spauto-topology.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  spauto-clab.yml  spauto-mpls-sdn-core.yml  spauto-mpls-sdn-full.yml  spauto-mpls-sdn.yml  spauto-topology.yml
.doctrees/: README.doctree  changelog.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.github/: .pre-commit-config.yaml  documentation.yml
.github/workflows/: ci.yml  documentation.yml  python-app.yml
SPAUTO/Automation APIs and Protocols/: index.html
SPAUTO/Extras/: Deploying NSO.html  index.html
SPAUTO/Network Device Programmability/: 3.7 Construct Xpath notation for a given node or instance of a node.html  index.html
SPAUTO/Network Programmability Foundation/: 4.1 Describe ETSI NFV.html  4.2 Describe NSO architecture.html  4.6 Implement XR Traffic Controller.html  4.6 Implement XR traffic controller (including topology information transfer to XTC).html  4.7 Identify the uses of Cisco WAE.html  Deploying NSO.html  index.html  net-foundation.html
_sources/: README.md.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/bf_mpls_sdn/: index.html
autoapi/mpls_in_the_sdn_era/: index.html
autoapi/nc/: index.html
autoapi/nr_add_device_nso/: index.html
autoapi/nr_deploy_configs/: index.html
autoapi/nr_get_napalm_configs/: index.html
autoapi/nr_get_nso_device_facts/: index.html
autoapi/nr_remediate/: index.html
autoapi/spauto/: index.html
autoapi/ttpex/: index.html
autoapi/xml_to_json/: index.html
clab-spauto-mpls-sdn-core.yml/: ansible-inventory.yml  topology-data.json
clab-spauto-mpls-sdn-full.yml/: ansible-inventory.yml
clab-spauto-mpls-sdn.yml/: ansible-inventory.yml  topology-data.json
docs/: conf.py  index.html  index.rst
mpls_in_the_sdn_era/: .gitignore
mpls_in_the_sdn_era/mpls_sdn_era_ansible/: example.pb.yml  hosts.yml  nc.py  pb.test.yml  pb_get_bgp.yml.yml  pb_netconf_backup.yml  pb_netconf_edit_xr.yml  pb_restconf_api.yml  pb_test_extra_vars.yml  pb_ttp.yml  test-ttp.ttp  ttp-ex.py
mpls_in_the_sdn_era/mpls_sdn_era_batfish/: bf_mpls_sdn.py  example-1.py
mpls_in_the_sdn_era/mpls_sdn_era_nornir/: .gitignore  config.yml  nr_add_device_nso.py  nr_deploy_config.py  nr_deploy_configs.py  nr_get_napalm_configs.py  nr_get_nso_device_facts.py  nr_get_nso_facts.py  nr_remediate.py
mpls_in_the_sdn_era/mpls_sdn_era_nso/: __init__.py
mpls_in_the_sdn_era/spauto_batfish/: bf_mpls_sdn.py
nso/: Dockerfile
spauto/Automation APIs and Protocols/: index.html  placeholder.html
spauto/Extras/: Deploying NSO.html  index.html
spauto/Network Device Programmability/: 3.6 Construct a Python script using RESTCONF with JSON.html  3.7 Construct Xpath notation for a given node or instance of a node.html  index.html
spauto/Network Programmability Foundation/: 4.1 Describe ETSI NFV.html  4.2 Describe NSO architecture.html  4.6 Implement XR Traffic Controller.html  4.7 Identify the uses of Cisco WAE.html  index.html
spauto/batfish/: bf_mpls_sdn.py
spauto/nornir/: config.yml  (+1 more)
tests/: conftest.py  test_mpls_in_the_sdn_era.py
tig/: docker-compose-tig.yml  docker-compose.yml
(+335 files in other folders)
