[tool.poetry]
name = "spauto_devnet"
version = "0.1.0"
description = "Playground to study for Cisco Devnet Service Provider Automation exam."
authors = ["h4ndzdatm0ld <hugotinoco@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
ncclient = "^0.6.10"
nornir-utils = "^0.1.2"
nornir-netmiko = "^0.1.1"
nornir-jinja2 = "^0.1.2"
pynso = "^1.2.0"
prettyprint = "^0.1.5"
PyYAML = "^5.4.1"
pybatfish = "^2021.2.26"
pybandit = "^0.0.1"
nornir-napalm = "^0.1.2"
docker = "^5.0.0"
ntc-templates = "^2.0.0"
xmltodict = "^0.12.0"
jxmlease = "^1.0.3"
ttp = "^0.7.2"
nornir = "^3.2.0"
hier-config = "^2.2.0"
nornir-hier-config = "^0.1.0"
netmiko = "^3.4.0"
napalm = "^3.3.1"
pyiosxr = "^0.53"
markupsafe = "2.0.1"

[tool.poetry.dev-dependencies]
isort = "*"
flake8 = "*"
pydocstyle = "*"
black = "*"
yamllint = "*"
sphinx-autoapi = "*"
sphinx-rtd-theme = "*"
myst-parser = "*"
sphinx = "*"
pre-commit = "*"
ipython = "*"
pytest = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/simple/"

[[tool.poetry.source]]
name = "test-pypi"
secondary = true
url = "https://test.pypi.org/simple/"

[tool.isort]
profile = "black"
