[tool.poetry]
name = "spauto"
version = "0.1.0"
description = "Playground to study for Cisco Devnet Service Provider Automation exam."
authors = ["h4ndzdatm0ld <hugotinoco@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nornir-utils = "^0.1.2"
nornir-jinja2 = "^0.1.2"
pynso = "^1.2.0"
PyYAML = "^5.4.1"
ntc-templates = "^2.0.0"
xmltodict = "^0.12.0"
jxmlease = "^1.0.3"
ttp = "^0.7.2"
pyiosxr = "^0.53"
markupsafe = "2.0.1"
pybatfish = "^2023.1.14"
ncclient = "^0.6.13"
nornir = "^3.3.0"
napalm = "^4.0.0"
nornir-napalm = "^0.3.0"
netmiko = "^4.1.2"
nornir-netmiko = "^0.2.0"

[tool.poetry.dev-dependencies]
isort = "*"
flake8 = "*"
pydocstyle = "*"
black  = "*"
yamllint = "*"
sphinx-autoapi = "*"
myst-parser = "*"
sphinx = "*"
pytest = "*"
ipython = "*"
pybandit = "*"
ansible-lint = "*"
pre-commit = "*"
prettyprint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/simple/"

[[tool.poetry.source]]
name = "test-pypi"
secondary = true
url = "https://test.pypi.org/simple/"

[tool.isort]
profile = "black"
