[tool.poetry]
name = "spauto"
version = "0.1.0"
description = "Playground to study for Cisco Devnet Service Provider Automation exam."
authors = ["h4ndzdatm0ld <hugotinoco@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nornir-utils = "^0.1.2"
nornir-jinja2 = "^0.1.2"
pynso = "^1.2.0"
PyYAML = "^5.4.1"
ntc-templates = "^2.0.0"
xmltodict = "^0.12.0"
jxmlease = "^1.0.3"
ttp = "^0.7.2"
pyiosxr = "^0.53"
markupsafe = "2.0.1"
ncclient = "^0.6.13"
nornir = "^3.3.0"
napalm = "^4.0.0"
nornir-napalm = "^0.3.0"
netmiko = "^4.1.2"
nornir-netmiko = "^0.2.0"
pybatfish = "^2022.9.7"

[tool.poetry.dev-dependencies]
isort = "*"
flake8 = "*"
pydocstyle = "*"
black  = "*"
yamllint = "*"
pytest = "*"
ipython = "*"
pybandit = "*"
pre-commit = "*"
prettyprint = "*"
sphinx = "5.1.1"
sphinx-rtd-theme = "^1.2.0"
myst-parser = "^1.0.0"
sphinx-autoapi = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/simple/"

[tool.isort]
profile = "black"
